--- a/android-application/ChineseCheckers/src/main/res/values/styles.xml
+++ b/android-application/ChineseCheckers/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowBackground">@color/app_background</item>
+        <item name="android:soundEffectsEnabled">false</item>
         <item name="android:textColor">@color/app_text</item>
         <item name="android:textSize">@dimen/activity_normal_text_size</item>
 
