--- a/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
@@ -57,7 +57,8 @@
                 <RadioGroup
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:id="@+id/settingsShowMovesRadioGroup">
 
                     <RadioButton
                         android:layout_width="40dp"
@@ -67,7 +68,8 @@
                         android:gravity="center"
                         android:textColor="@color/app_background"
                         android:textStyle="bold"
-                        android:text="ON"/>
+                        android:text="ON"
+                        android:id="@+id/settingsShowMoveOnButton"/>
 
                     <RadioButton
                         android:layout_width="40dp"
@@ -77,7 +79,8 @@
                         android:gravity="center"
                         android:textColor="@color/app_background"
                         android:textStyle="bold"
-                        android:text="OFF"/>
+                        android:text="OFF"
+                        android:id="@+id/settingsShowMoveOffButton"/>
 
                 </RadioGroup>
             </LinearLayout>
