--- a/android-application/ChineseCheckers/src/main/res/layout/activity_static_page.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_static_page.xml
@@ -10,7 +10,6 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:gravity="right"
-        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
 
         <TextView
@@ -43,6 +42,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="20dp"
             android:orientation="vertical">
 
             <TextView
