--- a/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_switch_right.xml
+++ b/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_switch_right.xml
@@ -6,7 +6,7 @@
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <corners android:radius="5dip" android:topLeftRadius="0dp" android:bottomLeftRadius="0dp"/>
-            <solid android:color="@color/green"/>
+            <solid android:color="@color/red"/>
         </shape>
     </item>
     <item android:state_checked="false">
