--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_dialog.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_dialog.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="@dimen/activity_horizontal_margin">
+        android:layout_margin="16dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -77,6 +77,7 @@
                 android:textColor="@color/app_text"
                 android:textAllCaps="true"
                 android:textStyle="bold"
+                android:text="@string/cancel"
                 android:id="@+id/dialogCancelButton" />
 
             <ImageView
@@ -94,6 +95,7 @@
                 android:textColor="@color/app_text"
                 android:textAllCaps="true"
                 android:textStyle="bold"
+                android:text="@string/accept"
                 android:id="@+id/dialogAcceptButton"/>
 
         </LinearLayout>
