--- a/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
@@ -32,20 +32,38 @@
         android:text="@string/play_offline"
         android:id="@+id/offlineConfigurationActivityButton" />
 
-    <Button
-        android:layout_width="250dp"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="25dp"
-        android:padding="5dp"
-        android:background="@drawable/chch_button_blue"
-        android:gravity="center_vertical|right"
-        android:textSize="@dimen/activity_xlarge_text_size"
-        android:textColor="@color/app_background"
-        android:textAllCaps="true"
-        android:textStyle="bold"
-        android:text="@string/play_online"
-        android:id="@+id/onlineListActivityButton" />
+        android:layout_marginTop="25dp">
+
+        <Button
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:padding="5dp"
+            android:background="@drawable/chch_button_blue"
+            android:gravity="center_vertical|right"
+            android:textSize="@dimen/activity_xlarge_text_size"
+            android:textColor="@color/app_background"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:text="@string/play_online"
+            android:id="@+id/onlineListActivityButton" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_toLeftOf="@id/onlineListActivityButton"
+            android:layout_centerVertical="true"
+            android:background="@drawable/chch_badge_notify_number_background"
+            android:padding="5dp"
+            android:text="17"
+            android:textStyle="bold"
+            android:textColor="@color/dark_red"
+            android:id="@+id/onlineMoveNotificationTextView"/>
+    </RelativeLayout>
 
     <Space
         android:layout_width="match_parent"
