--- a/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
@@ -1,11 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:orientation="vertical">
 
     <Space
         android:layout_width="match_parent"
@@ -58,10 +54,14 @@
             android:layout_toLeftOf="@id/onlineListActivityButton"
             android:layout_centerVertical="true"
             android:background="@drawable/chch_badge_notify_number_background"
-            android:padding="5dp"
-            android:text="17"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="1"
             android:textStyle="bold"
             android:textColor="@color/dark_red"
+            android:visibility="invisible"
             android:id="@+id/onlineMoveNotificationTextView"/>
     </RelativeLayout>
 
