--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_offline_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ca.brocku.chinesecheckers.OfflineGameActivity$OfflineGameFragment">
+    tools:context="ca.brocku.chinesecheckers.GameActivity$OfflineGameFragment">
 
     <Button
         android:layout_width="match_parent"
