--- a/android-application/ChineseCheckers/src/main/res/layout/activity_help.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_help.xml
@@ -1,17 +1,179 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="ca.brocku.chinesecheckers.HelpActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:text="Dis da help section mi brodda!"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:gravity="right"
+        android:orientation="horizontal">
 
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp"
+            android:gravity="center_vertical|left"
+            android:textSize="@dimen/activity_xxlarge_text_size"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:text="FAQ" />
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="48dp"
+            android:src="@drawable/logo_image"/>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_question_1"
+                android:textStyle="bold"
+                android:textSize="@dimen/activity_large_text_size"
+                android:layout_marginBottom="15dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_answer_1"
+                android:textSize="@dimen/activity_normal_text_size"
+                android:layout_marginBottom="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_question_2"
+                android:textStyle="bold"
+                android:textSize="@dimen/activity_large_text_size"
+                android:layout_marginBottom="15dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_answer_2"
+                android:textSize="@dimen/activity_normal_text_size"
+                android:layout_marginBottom="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_question_3"
+                android:textStyle="bold"
+                android:textSize="@dimen/activity_large_text_size"
+                android:layout_marginBottom="15dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_answer_3"
+                android:textSize="@dimen/activity_normal_text_size"
+                android:layout_marginBottom="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_question_4"
+                android:textStyle="bold"
+                android:textSize="@dimen/activity_large_text_size"
+                android:layout_marginBottom="15dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_answer_4"
+                android:textSize="@dimen/activity_normal_text_size"
+                android:layout_marginBottom="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_question_5"
+                android:textStyle="bold"
+                android:textSize="@dimen/activity_large_text_size"
+                android:layout_marginBottom="15dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_answer_5"
+                android:textSize="@dimen/activity_normal_text_size"
+                android:layout_marginBottom="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_question_6"
+                android:textStyle="bold"
+                android:textSize="@dimen/activity_large_text_size"
+                android:layout_marginBottom="15dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_answer_6"
+                android:textSize="@dimen/activity_normal_text_size"
+                android:layout_marginBottom="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_question_7"
+                android:textStyle="bold"
+                android:textSize="@dimen/activity_large_text_size"
+                android:layout_marginBottom="15dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/help_answer_7"
+                android:textSize="@dimen/activity_normal_text_size"
+                android:layout_marginBottom="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</LinearLayout>
