--- a/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
@@ -3,6 +3,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!-- unavailable network header -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:background="@color/app_button"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="-2dp"
+            android:src="@drawable/ic_action_wifi_light"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="@string/network_unavailable"/>
+
+    </LinearLayout>
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="50dp" />
