--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_dialog.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_dialog.xml
@@ -8,8 +8,10 @@
     android:layout_marginRight="@dimen/dialog_margin"
     android:padding="2dp"
     android:layout_gravity="center"
-    android:background="@drawable/chch_dialog_background">
+    android:background="@drawable/chch_dialog_background"
+    android:id="@+id/dialogContainer">
 
+    <!-- title section -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,7 +33,7 @@
 
     </LinearLayout>
 
-
+    <!-- message section -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,7 +52,7 @@
 
     </LinearLayout>
 
-
+    <!-- buttons section -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
