added Broadcast receiver for network connectivity notification. #137

--- a/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
         android:layout_height="40dp"
         android:gravity="center"
         android:background="@color/app_button"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:id="@+id/networkConnectivityContainer">
 
         <ImageView
             android:layout_width="20dp"
