--- a/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
@@ -1,15 +1,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:focusable="false"
     android:focusableInTouchMode="true">
 
+    <!-- unavailable network header -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:background="@color/app_button"
+        android:visibility="gone"
+        android:id="@+id/networkConnectivityContainer">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="-2dp"
+            android:src="@drawable/ic_action_wifi_light"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="@string/network_unavailable"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:gravity="right"
