--- a/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
@@ -117,6 +117,15 @@
                 android:layout_marginBottom="5dp"
                 android:text="@string/settings_your_username"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/activity_small_text_size"
+                android:textColor="@color/red"
+                android:text="@string/connect_to_edit_username"
+                android:visibility="gone"
+                android:id="@+id/settingsUsernameErrorTextView"/>
+
             <EditText
                 android:textColorHint="@color/app_background"
                 android:gravity="center_vertical|left"
