--- a/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
@@ -151,7 +151,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
-                    android:text="Background Sound Levels" />
+                    android:text="@string/settings_backgound_music" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -186,7 +186,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
-                    android:text="Sound Effects Levels" />
+                    android:text="@string/settings_sound_effects" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
