--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_online_list_item.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_online_list_item.xml
@@ -58,6 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="-6dp"
                     android:src="@drawable/ic_player_peg_orange"
+                    android:visibility="gone"
                     android:id="@+id/onlineListItemOrangeIcon"/>
 
                 <ImageView
